<resources>
    <string name="app_name">Page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_first">First Page</string>
    <string name="label_second">Second Page</string>
    <string name="label_third">Third Page</string>
    <string name="Ming_label">学名：</string>
    <string name="Mu_label">目   ：</string>
    <string name="Ke_label">科   ：</string>
    <string name="XingT_label">形态特征：</string>
    <string name="QiX_label">栖息环境：</string>
    <string name="ShengH_label">生活习性：</string>
    <string name="Xue1">熊猫</string>
    <string name="Mu1">食肉目</string>
    <string name="Ke1">熊科</string>
    <string name="Xing1">大熊猫体型肥硕似熊、丰腴富态，头圆尾短，头躯长1.2-1.8米，尾长10-12厘米。体重80-120千克，最重可达180千克</string>
    <string name="Qi1">大熊猫栖于中国长江上游的高山深谷，为东南季风的迎风面，气候温凉潮湿，其湿度常在80%以上</string>
    <string name="Sheng1">大熊猫每天除去一半进食的时间，剩下的一半时间多数便是在睡梦中度过。</string>
    <string name="Xue2">大象</string>
    <string name="Mu2">长鼻目</string>
    <string name="Ke2">象科</string>
    <string name="Xing2">它们主要外部特征为柔韧而肌肉发达的长鼻和扇大的耳朵，具缠卷的功能，是象自卫和取食的有力工具。</string>
    <string name="Sheng2">象是群居性动物，以家族为单位，由雌象做首领，每天活动的时间，行动路线，觅食地点等均听雌象指挥</string>
    <string name="Xue3">长颈鹿</string>
    <string name="Mu3">偶蹄目</string>
    <string name="Ke3">长颈鹿科</string>
    <string name="Xing3">长颈鹿雄性身高4.5-6.1米、雌性身高4.1-5.5米；雄性重量900-2000千克、雌性重量700-1300千克；颈部长度平均2.4米</string>
    <string name="Qi3">全部栖息于非洲热带、亚热带稀树草原、开放的合欢林地、干旱而开阔的稀树草原地带和树木稀少的半沙漠地带。</string>
    <string name="Xi3">群居。有时和斑马、鸵鸟、羚羊混群，日行性。嗅、听觉敏锐，性机警、胆怯，平时走路悠闲，但奔跑迅速</string>
    <string name="Qi2">象的生存环境 象栖息于多种生境,尤喜丛 林、草原和河谷地带。群居,雄 性偶有独栖。以植物为食,食量 极大,每日食量225千克以上</string>
</resources>
